<?xml version="1.0" encoding="UTF-8"?>
<!--

    (c) https://github.com/MontiCore/monticore

    The license generally applicable for this project
    can be found under https://github.com/MontiCore/monticore.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- PARENT PROJECT -->
    <parent>
        <artifactId>simulation</artifactId>
        <groupId>montisim</groupId>
        <version>${revision}</version>
    </parent>

    <!-- OUR OWN PROJECT -->
    <artifactId>vehicle</artifactId>
    <groupId>montisim-simulation</groupId>
    <version>${revision}</version>

    <!-- PROJECT DEPENDENCIES -->
    <dependencies>

        <!-- All modules have dependency to util -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>util</artifactId>
            <version>${revision}</version>
        </dependency>
		

		<!-- Vehicle has dependency to sensors -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>sensors</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Vehicle has dependency to environment -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>environment</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Vehicle has dependency to bus -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>bus</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Vehicle has dependency to commons -->
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>commons</artifactId>
            <version>${commons.version}</version>
        </dependency>

        <!-- Vehicle has dependency to fmu-wrapper-->
        <dependency>
            <groupId>org.siani.javafmi</groupId>
            <artifactId>fmu-wrapper</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- Vehicle has dependency to controller -->
        <dependency>
            <groupId>montisim-controller</groupId>
            <artifactId>navigation</artifactId>
            <version>${controller.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.6</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>2.0.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <!-- PROJECT PLUGINS AND PROPERTIES -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <!-- Run the tests where the resources are located -->
                    <workingDirectory>${project.basedir}/target/classes</workingDirectory>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>

        <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
        <main.basedir>${project.parent.basedir}</main.basedir>

        <!-- Specify Java 8 as version to avoid compile warnings -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

    </properties>
</project>
